package com.verlumen.tradestream.discovery

import com.google.common.collect.ImmutableList
import com.google.inject.Guice
import com.google.inject.Inject
import com.google.inject.testing.fieldbinder.Bind
import com.google.inject.testing.fieldbinder.BoundFieldModule
import com.google.protobuf.Any
import com.google.protobuf.Timestamp
import com.google.protobuf.util.Timestamps
import com.verlumen.tradestream.marketdata.Candle
import com.verlumen.tradestream.marketdata.InfluxDbCandleFetcher
import com.verlumen.tradestream.strategies.SmaRsiParameters
import com.verlumen.tradestream.strategies.Strategy
import com.verlumen.tradestream.strategies.StrategyType
import io.jenetics.DoubleChromosome
import io.jenetics.DoubleGene
import io.jenetics.Genotype
import io.jenetics.Phenotype
import io.jenetics.engine.Engine
import io.jenetics.engine.EvolutionResult
import io.jenetics.engine.EvolutionStream
import io.jenetics.util.ISeq
import org.apache.beam.sdk.testing.PAssert
import org.apache.beam.sdk.testing.TestPipeline
import org.apache.beam.sdk.transforms.Create
import org.apache.beam.sdk.transforms.ParDo
import org.apache.beam.sdk.values.PCollection
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.junit.runners.JUnit4
import java.io.Serializable
import java.util.stream.Collector

class TestCandleFetcher(
    private val cannedCandles: ImmutableList<Candle> = ImmutableList.of()
) : InfluxDbCandleFetcher(
    { throw UnsupportedOperationException("Test implementation") }, 
    "test-org", 
    "test-bucket"
), Serializable {
    
    override fun fetchCandles(
        symbol: String,
        startTime: Timestamp,
        endTime: Timestamp
    ): ImmutableList<Candle> = cannedCandles
    
    override fun close() {
        // No-op for test
    }
    
    companion object {
        private const val serialVersionUID = 1L
    }
}

class TestGAEngineFactory(
    private val mockEvolutionResult: EvolutionResult<DoubleGene, Double>? = null
) : GAEngineFactory, Serializable {
    
    override fun createEngine(params: GAEngineParams): Engine<*, *> {
        return TestEngine(mockEvolutionResult)
    }
    
    companion object {
        private const val serialVersionUID = 1L
    }
}

class TestEngine(
    private val mockResult: EvolutionResult<DoubleGene, Double>? = null
) : Engine<DoubleGene, Double>, Serializable {
    
    override fun stream(): EvolutionStream<DoubleGene, Double> {
        return TestEvolutionStream(mockResult)
    }
    
    // Implement other required methods with no-op or minimal implementations
    override fun population() = throw UnsupportedOperationException("Test implementation")
    override fun genotypeFactory() = throw UnsupportedOperationException("Test implementation")
    override fun fitnessFunction() = throw UnsupportedOperationException("Test implementation")
    override fun fitnessScaler() = throw UnsupportedOperationException("Test implementation")
    override fun survivorsSelector() = throw UnsupportedOperationException("Test implementation")
    override fun offspringSelector() = throw UnsupportedOperationException("Test implementation")
    override fun alterers() = throw UnsupportedOperationException("Test implementation")
    override fun mapping() = throw UnsupportedOperationException("Test implementation")
    override fun constraint() = throw UnsupportedOperationException("Test implementation")
    override fun clock() = throw UnsupportedOperationException("Test implementation")
    override fun executor() = throw UnsupportedOperationException("Test implementation")
    override fun maximalPhenotypeAge() = throw UnsupportedOperationException("Test implementation")
    override fun populationSize() = throw UnsupportedOperationException("Test implementation")
    override fun individualCreationRetries() = throw UnsupportedOperationException("Test implementation")
    
    companion object {
        private const val serialVersionUID = 1L
    }
}

class TestEvolutionStream(
    private val mockResult: EvolutionResult<DoubleGene, Double>? = null
) : EvolutionStream<DoubleGene, Double>, Serializable {
    
    override fun limit(maxSize: Long): EvolutionStream<DoubleGene, Double> = this
    
    override fun <R> collect(collector: Collector<in EvolutionResult<DoubleGene, Double>, *, R>): R {
        @Suppress("UNCHECKED_CAST")
        return mockResult as R
    }
    
    // Implement other stream methods as needed
    companion object {
        private const val serialVersionUID = 1L
    }
}

class TestGenotypeConverter(
    private val cannedParameters: Any? = null
) : GenotypeConverter, Serializable {
    
    override fun convertToParameters(genotype: Genotype<DoubleGene>, strategyType: StrategyType): Any {
        return cannedParameters ?: Any.getDefaultInstance()
    }
    
    // Implement other required methods
    override fun convertToGenotype(parameters: Any, strategyType: StrategyType): Genotype<DoubleGene> {
        return Genotype.of(DoubleChromosome.of(0.0, 1.0))
    }
    
    companion object {
        private const val serialVersionUID = 1L
    }
}

@RunWith(JUnit4::class)
class RunGADiscoveryFnTest {

    @get:Rule
    val pipeline: TestPipeline = TestPipeline.create()

    @Before
    fun setUp() {
        // No need for Mockito setup
    }

    private fun createTestRequest(): StrategyDiscoveryRequest {
        val now = System.currentTimeMillis()
        return StrategyDiscoveryRequest.newBuilder()
            .setSymbol("BTC/USD")
            .setStartTime(Timestamps.fromMillis(now - 200000))
            .setEndTime(Timestamps.fromMillis(now - 100000))
            .setStrategyType(StrategyType.SMA_RSI)
            .setTopN(1)
            .setGaConfig(
                GAConfig.newBuilder()
                    .setMaxGenerations(10)
                    .setPopulationSize(20)
                    .build()
            ).build()
    }

    private fun createDummyCandle(timestamp: Timestamp): Candle =
        Candle.newBuilder()
            .setTimestamp(timestamp)
            .setCurrencyPair("BTC/USD")
            .setOpen(100.0)
            .setHigh(110.0)
            .setLow(90.0)
            .setClose(105.0)
            .setVolume(1000.0)
            .build()

    @Test
    fun testRunGADiscoveryFn_success() {
        val request = createTestRequest()
        val dummyCandle = createDummyCandle(request.startTime)
        val candles = ImmutableList.of(dummyCandle)

        val smaRsiParams = SmaRsiParameters.newBuilder()
            .setMovingAveragePeriod(10)
            .setRsiPeriod(14)
            .setOverboughtThreshold(70.0)
            .setOversoldThreshold(30.0)
            .build()
        val paramsAny = Any.pack(smaRsiParams)

        val genotype = Genotype.of(DoubleChromosome.of(0.0, 1.0))
        val phenotype = Phenotype.of(genotype, 1, 10.5)
        
        // Create mock evolution result
        val mockEvolutionResult = object : EvolutionResult<DoubleGene, Double>, Serializable {
            override fun population() = ISeq.of(phenotype)
            
            // Implement other required methods with minimal implementations
            override fun generation() = 1L
            override fun totalGenerations() = 1L
            override fun durations() = throw UnsupportedOperationException("Test implementation")
            override fun killCount() = 0
            override fun invalidCount() = 0
            override fun alterCount() = 0
            override fun bestPhenotype() = phenotype
            override fun worstPhenotype() = phenotype
            override fun bestFitness() = 10.5
            override fun worstFitness() = 10.5
            
            companion object {
                private const val serialVersionUID = 1L
            }
        }

        // Create the DoFn with serializable test doubles
        val runGADiscoveryFn = RunGADiscoveryFn(
            TestCandleFetcher(candles),
            TestGAEngineFactory(mockEvolutionResult),
            TestGenotypeConverter(paramsAny)
        )

        val input: PCollection<StrategyDiscoveryRequest> = pipeline.apply(Create.of(request))
        val output: PCollection<StrategyDiscoveryResult> = input.apply(ParDo.of(runGADiscoveryFn))

        val expectedStrategy = DiscoveredStrategy.newBuilder()
            .setStrategy(Strategy.newBuilder().setType(StrategyType.SMA_RSI).setParameters(paramsAny))
            .setScore(10.5)
            .setSymbol("BTC/USD")
            .setStartTime(request.startTime)
            .setEndTime(request.endTime)
            .build()
        val expectedResult = StrategyDiscoveryResult.newBuilder()
            .addTopStrategies(expectedStrategy)
            .build()

        PAssert.that(output).containsInAnyOrder(expectedResult)
        pipeline.run()
    }

    @Test
    fun testRunGADiscoveryFn_noCandles() {
        val request = createTestRequest()
        
        val runGADiscoveryFn = RunGADiscoveryFn(
            TestCandleFetcher(ImmutableList.of()), // Empty candles
            TestGAEngineFactory(),
            TestGenotypeConverter()
        )

        val input: PCollection<StrategyDiscoveryRequest> = pipeline.apply(Create.of(request))
        val output: PCollection<StrategyDiscoveryResult> = input.apply(ParDo.of(runGADiscoveryFn))

        PAssert.that(output).empty()
        pipeline.run()
    }

    @Test
    fun testRunGADiscoveryFn_gaYieldsNoResults() {
        val request = createTestRequest()
        val dummyCandle = createDummyCandle(request.startTime)
        val candles = ImmutableList.of(dummyCandle)

        // Mock evolution result with empty population
        val mockEvolutionResult = object : EvolutionResult<DoubleGene, Double>, Serializable {
            override fun population() = ISeq.empty<Phenotype<DoubleGene, Double>>()
            
            // Implement other required methods
            override fun generation() = 1L
            override fun totalGenerations() = 1L
            override fun durations() = throw UnsupportedOperationException("Test implementation")
            override fun killCount() = 0
            override fun invalidCount() = 0
            override fun alterCount() = 0
            override fun bestPhenotype() = throw UnsupportedOperationException("No best phenotype")
            override fun worstPhenotype() = throw UnsupportedOperationException("No worst phenotype")
            override fun bestFitness() = throw UnsupportedOperationException("No best fitness")
            override fun worstFitness() = throw UnsupportedOperationException("No worst fitness")
            
            companion object {
                private const val serialVersionUID = 1L
            }
        }

        val runGADiscoveryFn = RunGADiscoveryFn(
            TestCandleFetcher(candles),
            TestGAEngineFactory(mockEvolutionResult),
            TestGenotypeConverter()
        )

        val input: PCollection<StrategyDiscoveryRequest> = pipeline.apply(Create.of(request))
        val output: PCollection<StrategyDiscoveryResult> = input.apply(ParDo.of(runGADiscoveryFn))

        PAssert.that(output).empty()
        pipeline.run()
    }
}
